[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Staatliches-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 42.7149
margin_top = 596.964
margin_right = 257.715
margin_bottom = 647.964
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrencyLabel" type="Label" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1158.59
margin_top = -9.51001
margin_right = 1198.59
margin_bottom = 23.49
custom_fonts/font = SubResource( 2 )
text = "$0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoLabel" type="Label" parent="Control"]
margin_left = 1169.64
margin_top = 628.036
margin_right = 1245.64
margin_bottom = 694.036
custom_fonts/font = SubResource( 3 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
